add animation to top chart

--- a/shared/css/_colchart.scss
+++ b/shared/css/_colchart.scss
@@ -91,5 +91,6 @@
 .source{	
 	font-size: 13px;
 	line-height: 18px;
+	margin-top: 10px;
 	font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
 }
