--- a/.build/cases-eng/main.css
+++ b/.build/cases-eng/main.css
@@ -405,6 +405,9 @@
   padding-top: 20px;
   padding-bottom: 20px; }
 
+.eng-graph {
+  max-width: 600px; }
+
 .multiple-container {
   display: -webkit-flex;
   display: flex;
@@ -455,14 +458,14 @@
 .x.axis text, .y.axis text {
   font-family: 'Guardian Text Sans Web', Arial, sans-serif;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 14px;
   text-align: left;
   fill: #929297;
   font-style: normal;
-  font-size: 24px; }
+  font-size: 14px; }
   @media (min-width: 28.125em) {
     .x.axis text, .y.axis text {
-      font-size: 16px; } }
+      font-size: 14px; } }
 
 .gv-headline {
   font-size: 20px;
