--- a/atoms/cases-eng/server/templates/main.html
+++ b/atoms/cases-eng/server/templates/main.html
@@ -6,7 +6,7 @@
             <p>confirmed</p>
         </div>
         <div class="info-box">
-            <p><span class="estimated">--</span></p>
+            <div><span class="estimated">--</span></div>
             <p>estimated</p>
         </div>
     </div>
