--- a/atoms/cases-eng/server/templates/main.html
+++ b/atoms/cases-eng/server/templates/main.html
@@ -2,16 +2,16 @@
     <div class="gv-headline">England: infections could be 10 times higher than offical numbers</div>
     <div class="gv-subhead">
         <div class="info-box">
-            <p><span class="confirmed">--</span></p>
-            <p>people confirmed infected</p>
-        </div>
-        <div class="info-box">
             <div><span class="estimated">--</span></div>
             <p>people estimated infected</p>
+        </div>
+        <div class="info-box">
+            <p><span class="confirmed">--</span></p>
+            <p>people confirmed infected</p>
         </div>
     </div>
     <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
     <div class="source">
-        % infection rate for all people in England over the course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health. 
+        % of the population of England who have been infected by coronavirus over the course of the pandemic. Data: estimated cases - Edge Health, confirmed cases - data.gov.uk, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
     </div>
 </div>
