--- a/atoms/cases-utla/server/templates/main.html
+++ b/atoms/cases-utla/server/templates/main.html
@@ -99,7 +99,7 @@
         </div>
     </div>
     <div class="source">
-        % of the population who have been infected by coronavirus over the course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+        % of the population who have been infected by coronavirus over the course of the pandemic. Data: estimated cases - Edge Health, confirmed cases - data.gov.uk, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
     </div>
 
 </div>
