--- a/atoms/cases-eng/server/templates/main.html
+++ b/atoms/cases-eng/server/templates/main.html
@@ -3,11 +3,11 @@
     <div class="gv-subhead">
         <div class="info-box">
             <div><span class="estimated">--</span></div>
-            <p>people estimated infected</p>
+            <p>estimated</p>
         </div>
         <div class="info-box">
             <p><span class="confirmed">--</span></p>
-            <p>people confirmed infected</p>
+            <p>confirmed</p>
         </div>
     </div>
     <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
