--- a/atoms/cases-utla/server/templates/main.html
+++ b/atoms/cases-utla/server/templates/main.html
@@ -1,9 +1,8 @@
 <div class="interactive-wrapper">
 
-    <div class="gv-headline">New figures reveal England's worst-hit areas</div>
+    <div class="gv-headline">New figures reveal London and north-west as England's worst-hit areas</div>
     <div class="gv-subhead-top">
-        London borough Brent comes out as worst affected when estimates for "missing cases"
-         are factored in.
+        Official, recorded cases compared to estimated total cases by local authority.
     </div>
 
     <div class="multiple-container">
@@ -15,8 +14,8 @@
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
+                    <p><span class="recorded">--</span></p>
+                    <p>recorded</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -31,8 +30,8 @@
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
+                    <p><span class="recorded">--</span></p>
+                    <p>recorded</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -46,8 +45,8 @@
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
+                    <p><span class="recorded">--</span></p>
+                    <p>recorded</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -61,8 +60,8 @@
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
+                    <p><span class="recorded">--</span></p>
+                    <p>recorded</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox=viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -76,8 +75,8 @@
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
+                    <p><span class="recorded">--</span></p>
+                    <p>recorded</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -91,15 +90,17 @@
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
+                    <p><span class="recorded">--</span></p>
+                    <p>recorded</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
         </div>
     </div>
     <div class="source">
-        % of the population who have been infected by coronavirus over the course of the pandemic. Data: estimated cases - Edge Health, confirmed cases - data.gov.uk, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+        % of the population who have been infected by coronavirus over the course of the pandemic. 
+        Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk. 
+        Correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
     </div>
 
 </div>
