--- a/shared/css/_colchart.scss
+++ b/shared/css/_colchart.scss
@@ -58,7 +58,7 @@
 			font-weight: bold;
 			font-size: 32px;
 		}
-		span.confirmed {
+		span.recorded {
 			color: #c70000;
 		}
 		span.estimated {
