--- a/atoms/cases-eng/server/templates/main.html
+++ b/atoms/cases-eng/server/templates/main.html
@@ -5,11 +5,11 @@
     </div>
     <div class="gv-subhead">
         <div class="info-box">
-            <div><span class="estimated">--</span></div>
+            <div><span class="estimated">&nbsp;</span></div>
             <p>estimated</p>
         </div>
         <div class="info-box">
-            <p><span class="recorded">--</span></p>
+            <p><span class="recorded">&nbsp;</span></p>
             <p>recorded</p>
         </div>
     </div>
