--- a/shared/css/_colchart.scss
+++ b/shared/css/_colchart.scss
@@ -34,6 +34,13 @@
 	margin-right: 10px;
 }
 
+.gv-subhead-top {
+	margin-bottom: 5px;
+	font-size: 13px;
+	line-height: 18px;
+	font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+}
+
 
 .gv-subhead {
 	display: flex;
