--- a/.build/cases-eng/main.css
+++ b/.build/cases-eng/main.css
@@ -428,9 +428,8 @@
 .multiple {
   margin-top: 20px;
   margin-bottom: 16px;
-  -webkit-flex: 0 0 310px;
-          flex: 0 0 310px;
-  margin-right: 10px; }
+  -webkit-flex: 0 0 280px;
+          flex: 0 0 280px; }
 
 .gv-subhead-top {
   margin-bottom: 5px;
