--- a/atoms/cases-utla/server/templates/main.html
+++ b/atoms/cases-utla/server/templates/main.html
@@ -98,8 +98,8 @@
         </div>
     </div>
     <div class="source">
-        % of the population infected by coronavirus over the course of the pandemic, up to 9 Nov 2020.
-        Data: Estimated cases - Edge Health. Recorded cases - data.gov.uk.
+        % population infected by coronavirus over the course of the pandemic, up to 9 Nov 2020.
+        Data: Estimated cases, Edge Health. Recorded cases, data.gov.uk.
     </div>
 
 </div>
