change id to class

--- a/atoms/cases-eng/server/templates/main.html
+++ b/atoms/cases-eng/server/templates/main.html
@@ -13,7 +13,7 @@
             <p>recorded</p>
         </div>
     </div>
-    <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
+    <svg class="gv-svg-col-chart-est" viewBox="0,0,600,400" style="overflow: visible;"></svg>
     <div class="source">
         % population of England infected by coronavirus over the course of the pandemic, up to 9 Nov 2020. 
         Data: Estimated cases, Edge Health. Recorded cases, data.gov.uk. 
