--- a/atoms/cases-utla/server/templates/main.html
+++ b/atoms/cases-utla/server/templates/main.html
@@ -1,4 +1,4 @@
-<div class="interactive-wrapper">
+<div class="interactive-wrapper est-graphics">
 
     <div class="gv-headline">One in three may have had coronavirus in England's worst-hit areas</div>
     <div class="gv-subhead-top">
