--- a/.build/cases-eng/main.css
+++ b/.build/cases-eng/main.css
@@ -476,11 +476,11 @@
 .est-graphics .gv-shadow-text {
   stroke: 1px solid white; }
 
-.est-graphics .x.axis .tick line, .est-graphics .y.axis .tick line {
+.est-graphics .x-est.axis .tick line, .est-graphics .y-est.axis .tick line {
   color: #dcdcdc;
   stroke-width: 1px; }
 
-.est-graphics .x.axis text, .est-graphics .y.axis text {
+.est-graphics .x-est.axis text, .est-graphics .y-est.axis text {
   font-family: 'Guardian Text Sans Web', Arial, sans-serif;
   font-weight: 400;
   line-height: 14px;
@@ -489,7 +489,7 @@
   font-style: normal;
   font-size: 14px; }
   @media (min-width: 28.125em) {
-    .est-graphics .x.axis text, .est-graphics .y.axis text {
+    .est-graphics .x-est.axis text, .est-graphics .y-est.axis text {
       font-size: 14px; } }
 
 .est-graphics .gv-headline {
