Tweak chart headlines

--- a/atoms/cases-eng/server/templates/main.html
+++ b/atoms/cases-eng/server/templates/main.html
@@ -1,5 +1,5 @@
 <div class="interactive-wrapper eng-graph est-graphics">
-    <div class="gv-headline">Infections in England could be six times higher than official numbers</div>
+    <div class="gv-headline">Infections in England could be five times higher than official numbers </div>
     <div class="gv-subhead-top">
         Official, recorded cases compared to estimated cases in England
     </div>
