--- a/atoms/cases-utla/server/templates/main.html
+++ b/atoms/cases-utla/server/templates/main.html
@@ -1,6 +1,6 @@
 <div class="interactive-wrapper est-graphics">
 
-    <div class="gv-headline">One in three may have had coronavirus in England's worst-hit areas</div>
+    <div class="gv-headline">One in two may have had coronavirus in England's worst-hit areas</div>
     <div class="gv-subhead-top">
         Official, recorded cases compared to estimated cases by local authority.
     </div>
